--- a/frontend/src/styles/SavedSpotCard.scss
+++ b/frontend/src/styles/SavedSpotCard.scss
@@ -10,6 +10,44 @@
   padding-bottom: 0.75rem;
 }
 
+.savedSpot-homepage__container {
+  color: #000000;
+  text-decoration: none;
+  width: 100%;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 0.65rem;
+  padding: 1.5rem;
+  padding-bottom: 0.75rem;
+
+  h2, h5 {
+    font-size: 16px;
+    font-weight: 700;
+
+    span {
+      position: relative;
+      font-weight: 400;
+      font-size: 15px;
+      color: $text-light-grey;
+      bottom: 0.02rem;
+    }
+  }
+
+  h3 {
+    font-size: 13px;
+    font-weight: 700;
+    color: $text-grey;
+  }
+
+  h4 {
+    font-size: 13px;
+    font-weight: 400;
+    color: $text-light-grey;
+    padding: 0;
+  }
+}
+
 .savedSpotCard__container:hover .savedSpotCard__image img {
   transform: scale(1.08);
 }
@@ -17,6 +55,18 @@
 .savedSpotCard__image {
   border-radius: 24px;
   overflow: hidden;
+  img {
+    transition: ease-in 0.25s;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.savedSpot-homepage__image{
+  width: 100%;
+  border-radius: 24px;
+  overflow: hidden;
+
   img {
     transition: ease-in 0.25s;
     width: 100%;
