--- a/frontend/src/styles/AllSpotsSearch.scss
+++ b/frontend/src/styles/AllSpotsSearch.scss
@@ -12,7 +12,7 @@
     height: 2rem;
     width: 30rem;
     padding: 0 1rem;
-    background-color: $button-grey-disabled;
+    background-color: $button-grey;
     border: none;
     border-radius: 24px;
     outline-color: $button-grey-hover;
