--- a/frontend/src/styles/AllSpotsSearch.scss
+++ b/frontend/src/styles/AllSpotsSearch.scss
@@ -8,14 +8,26 @@
   gap: 1rem;
   align-items: center;
 
+  .allSpotsSearch__input {
+    position: relative;
+  }
+
   input {
     height: 2rem;
     width: 30rem;
     padding: 0 1rem;
-    background-color: $button-grey;
-    border: none;
+    background-color: #fff;
+    border: 0.8px solid $button-grey-hover;
     border-radius: 24px;
-    outline-color: $button-grey-hover;
+    outline-color: #949494;
+    padding-left: 40px;
+  }
+
+  .allSpotsSearch__icon {
+    color: $text-grey;
+    position: absolute;
+    left: 15px;
+    top: 8px;
   }
 
   .allSpots-btn-grey {
