--- a/frontend/src/styles/UserInfoCard.scss
+++ b/frontend/src/styles/UserInfoCard.scss
@@ -5,10 +5,10 @@
 .user-info__container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   width: 300px;
-  height: 500px;
-  padding: 20px;
+  height: max-content;
+  padding: 2rem;
   background-color: var(--body-background);
   box-shadow: var(--shadow) 0px 2px 8px 0px;
   border-radius: 24px;
@@ -19,25 +19,23 @@
   height: 90px;
   border-radius: 50%;
   object-fit: cover;
-  margin: 2rem 1.5rem;
+  margin-bottom: 2rem;
 }
 
 .user-info__details {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   margin-bottom: 3rem;
 
   h1 {
     padding-bottom: 1rem;
-    text-align: center;
   }
 
   .user-info__location {
     justify-content: center;
-    align-items: center;
-    text-align: center;
+    align-items: flex-start;
     color: var(--text-light);
   }
 }
@@ -45,7 +43,7 @@
 .user-info__profile-stats {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   width: 100%;
 
@@ -80,7 +78,7 @@
   
 
   p {
-    padding-left: 4rem;
+    padding-left: 3rem;
     color: var(--text-light);
   }
 }
